fixed bug where tabs overlapped in builder list

--- a/app.css
+++ b/app.css
@@ -6,9 +6,6 @@
 .simpleDemo ul[dnd-list] > li {
 	position: relative;
 }
-li{
-	height: 120px;
-}
 .builder, .choices{
 	background-color: gray;
 	min-width: 600px;
